# DesignByContractPlusPlus

./: .gitignore  .travis.yml  .travis_build_and_test.sh  .travis_create_doxygen_and_deploy.sh  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  test.cpp
docs/: Info.plist  Nodes.xml  Tokens.xml  annotated.html  class_design_by_contract_plus_plus_1_1_h_a_s___i_n_v_a_r_i_a_n_t-members.html  class_design_by_contract_plus_plus_1_1_h_a_s___i_n_v_a_r_i_a_n_t.html  class_design_by_contract_plus_plus_1_1_invariant_checker-members.html  class_design_by_contract_plus_plus_1_1_invariant_checker.html  class_design_by_contract_plus_plus_1_1_invariant_checker__coll__graph.map  class_design_by_contract_plus_plus_1_1_invariant_checker__coll__graph.md5  class_design_by_contract_plus_plus_1_1_invariant_checker__inherit__graph.map  class_design_by_contract_plus_plus_1_1_invariant_checker__inherit__graph.md5  class_design_by_contract_plus_plus_1_1_invariant_checker_a1e35e3423c97ccedff382dc04bb97d63_icgraph.map  class_design_by_contract_plus_plus_1_1_invariant_checker_a1e35e3423c97ccedff382dc04bb97d63_icgraph.md5  class_design_by_contract_plus_plus_1_1_invariant_checker_a28e68029959eca16955a273b4ebed859_icgraph.map  class_design_by_contract_plus_plus_1_1_invariant_checker_a28e68029959eca16955a273b4ebed859_icgraph.md5  class_design_by_contract_plus_plus_1_1_invariant_checker_a2f7972e9625873f169c474417993cba3_icgraph.map  class_design_by_contract_plus_plus_1_1_invariant_checker_a2f7972e9625873f169c474417993cba3_icgraph.md5  class_design_by_contract_plus_plus_1_1_invariant_checker_ac7dbdb3757e7fb04e606070e54f35f30_cgraph.map  class_design_by_contract_plus_plus_1_1_invariant_checker_ac7dbdb3757e7fb04e606070e54f35f30_cgraph.md5  class_design_by_contract_plus_plus_1_1_invariant_checker_ad54f2a418aa6dbda0a91d33b47df74b7_icgraph.map  class_design_by_contract_plus_plus_1_1_invariant_checker_ad54f2a418aa6dbda0a91d33b47df74b7_icgraph.md5  class_design_by_contract_plus_plus_1_1_invariant_checker_af74dec542f05fbc5a10813aa06ce8f01_cgraph.map  (+74 more)
include/: dbcpp.h
src/: dbcpp.cpp  (+1 more)
test/: CMakeLists.txt  expected_log_contracts.txt  invariant_test.cpp  log_contracts.txt  postcond_test.cpp  precond_test.cpp  run_trace_test.py  trace_test.cpp
(+29 files in other folders)
